﻿0.9.3
=====

Bugfixes:

  * Fix a potential infinite loop with nested template includes.  Inclusions
    are now limited to a maximum of 250 per page.


0.9.2
=====

New Features:

  * Update the LDAP sample in applicationContext-security.xml with an example
    of using LDAP for authentication and JAMWiki for role management.  Provided
    by Bobby Lawrence.

Bugfixes:

  * Fix list parsing for lists that end with </td> or </div>.
  * Fix the manual upgrade steps for namespace in the UPGRADE.txt document.
    Reported by an anonymous user.
  * Fix an issue in which non-image file uploads could fail on some operating
    systems.  Reported by an anonymous user.
  * Fix an invalid "You may not remove ROLE_SYSADMIN from your own account"
    message on the Special:Roles page when updating the sysadmin account.
  * Make sure all tables are properly migrated when using the
    Special:Maintenance "database migration" functionality.


0.9.1
=====

New Features:

  * Support added for the {{DISPLAYTITLE}} magic word.

Bugfixes:

  * __NOEDITSECTION__ was being improperly stripped from topics.
  * Fix a potental JDBC error with FORWARD_ONLY result sets when parsing
    deleted topics.  Reported by cmasuch.
  * Case-insensitive topic names and deleted topics were not being properly
    updated in the cache.
  * Exclude redirects when calculating the number of articles using the
    NUMBEROFARTICLES magic word.
  * Upgrade to Lucene Search 3.0.2 to resolve a LockObtainFailedException
    error.  Reported by TimStone.


0.9.0
=====

New Features:

  * Signficant updates to the syntax parser, including support for additional
    HTML tags and XHTML transitional validation of tag attributes.
  * New Special:VirtualWiki page for administering virtual wikis and
    namespaces, including the ability to configure translated / alternate
    namespaces and to change the default virtual wiki from "en".
  * Support the #if: and the #ifeq parser functions.  Usage: